syntax = "proto3";
option csharp_namespace = "Lachain.Proto";
option java_package = "com.latoken.proto";
import "default.proto";

message MultiSig {
    uint32 quorum = 1;
    repeated ECDSAPublicKey validators = 2;
    message SignatureByValidator {
        ECDSAPublicKey key = 1;
        Signature value = 2;
    }
    repeated SignatureByValidator signatures = 3;
}